--- a/config1.json
+++ b/config1.json
@@ -1,1 +1,8 @@
-{"RC": "dw6hdn2xyb", "AttackTime": 1500, "DefenceTime": 1550, "planetName": "THE_BOT", "interval": 5, "rival": ["``THALA``"]}
+{
+  "RC": "dw6hdn2xyb",
+  "AttackTime": 1500,
+  "DefenceTime": 1550,
+  "planetName": "THE_BOT",
+  "interval": 5,
+  "rival": ["``THALA``"]
+}
