--- a/config1.json
+++ b/config1.json
@@ -1,8 +1,11 @@
 {
   "RC": "dw6hdn2xyb",
-  "AttackTime": 1500,
-  "DefenceTime": 1550,
+  "startAttackTime": 1500,
+  "stopAttackTime": 1550,
+  "attackIntervalTime": 5,
+  "startDefenceTime": 1500,
+  "stopDefenceTime": 1550,
+  "defenceIntervalTime": 5,
   "planetName": "THE_BOT",
-  "interval": 5,
   "rival": ["``THALA``"]
 }
