--- a/config2.json
+++ b/config2.json
@@ -6,6 +6,6 @@
   "startDefenceTime": 1955,
   "stopDefenceTime": 1975,
   "defenceIntervalTime": 5,
-  "planetName": "THE_BOT",
-  "rival": ["``THALA``"]
+  "planetName": "",
+  "rival": [""]
 }
