--- a/config1.json
+++ b/config1.json
@@ -1,5 +1,5 @@
 {
-  "RC": "",
+  "RC": "onfoqk2ff1",
   "startAttackTime": 1955,
   "stopAttackTime": 1975,
   "attackIntervalTime": 5,
@@ -7,5 +7,5 @@
   "stopDefenceTime": 1975,
   "defenceIntervalTime": 5,
   "planetName": "",
-  "rival": [""]
+  "rival": ["``THALA``"]
 }
